# bezoekersparkeren

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test_vision.py
.github/workflows/: build-and-push.yml
scripts/: deploy-incus.sh  setup-incus.sh
src/bezoekersparkeren/: client.py  config.py  license_plate_recognition.py  main.py  models.py
src/bezoekersparkeren.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bezoekersparkeren/bot/: handlers.py  middleware.py  telegram_bot.py
src/bezoekersparkeren/utils/: session_manager.py  time_utils.py
tests/: conftest.py  test_bot.py  test_client.py  test_client_extra.py  test_handlers.py  test_handlers_multi.py  test_time_utils.py
